data/derived/fa15/progs/unify/prog1108.ml.out
Characters 77-78:
  if x = b then b else fixpoint (f,x);;
                                 ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a -> ('a -> 'a * bool) * 'a
       The type variable 'a occurs inside 'a -> 'a * bool
